@@ -1,6 +1,8 @@
 
 		CHANGES in `multcomp' VERSION 1.1-3
 
+    o   bugfix for models without intercept and more than one factor
+
     o   print calls when available only
 
     o   support for coxme objects
